Wed Dec 02 01:16:00 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Use the hash of query
	  strings, rather than the raw strings, to avoid problems with key
	  length limits in xapian.  Store the raw string additionally, so
	  we can report a cache miss in the event of a collision, and so we
	  can iterate through the stored query strings.

Tue Dec 01 23:54:39 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/query_serialise.py: Improve
	  serialisation functions: flatten nested combinations into lists,
	  and improved the serialised representations of these too.  Unify
	  representation of queries joined with .compose(OP_AND) and those
	  joined with &, and similarly for OP_OR and |.

Tue Dec 01 23:53:22 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Add 'Query' to the unserialisation
	  context.  Fix an incorrect return type if a field was specified
	  for geolocation sorting which hadn't been indexed appropriately.

Tue Dec 01 12:42:35 GMT 2009  Richard Boulton <richard@tartarus.org>

	* MANIFEST.in,setup.py: Add xappy.cachemanger to distribution.

Tue Dec 01 11:47:46 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Improve the serialisation of the result of
	  norm().

Mon Nov 30 12:10:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Check that only one of docid and xapid
	  are set in get_document() before entering the while loop.  This
	  fixes a bug where the xapid got set later in the loop, so when a
	  DatabaseModifiedException error happened, the xapid was set the
	  next time around, triggering the error.

Thu Nov 26 17:29:47 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/cached_searches.py: Add
	  Query.merge_with_cached() to make applying a cached query easier.
	  Add a test for this.
