@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13666.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13711.tgz',
      'xapian-core.tgz',
-     '029f833e9c86b18690d82981685d61e403a432f8',
+     'b8f4db7e59a6b333452a774608e6e4285b318a8b',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13666.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13711.tgz',
      'xapian-bindings.tgz',
-     'f041fd1072e23f0268d0ecfcbb09700b6a5218b4',
+     '2787c3329def41188bcca2e674cdee97255c1b5c',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13666.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13711.tgz',
      'win32msvc.tgz',
-     '71edb8110dfc8fd615bf9e90f482ced71751a1ad',
+     '0ad43504998f609ac087fad284d9e0fb339c57f6',
      'xapian-core/win32',
     ),
     ('Xapian extras',
